--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,50 @@
 * {
     font-family: 'Titillium Web', sans-serif;
+    background-color: black;
+    color: lightgray;
+}
+
+.header {
+    display: flex;
+    flex-wrap: 12;
+    justify-content: center;
+}
+
+.body {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
 }
 
 h1, h2, h3 {
+    color: yellow;
     font-weight: 600;
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 lightgrey;
     transition: 0.3s;
-    width: 40%;
+    width: 30%;
     border-radius: 5px;
+    margin: 20px 20px 20px 20px;
 }
   
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 yellow;
 }
-  
+
 img {
-    border-radius: 5px 5px 0 0;
+    max-width: 100%;
+    max-height: 100%;
+    display: inline;
+    border-radius: 10px 10px 0 0;
 }
-  
+
 .container {
     padding: 2px 16px;
 }
