create first page of web spa to characters.

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,17 +8,51 @@
     display: flex;
     flex-wrap: 12;
     justify-content: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #000000;
+    width: 100%;
+}
+  
+li {
+    float: left;
+    border-right:1px solid #000000;
+}
+  
+li:last-child {
+    border-right: none;
+}
+  
+li a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: yellow;
+}
+  
+li a:hover:not(.active) {
+    background-color: #222222;
+}
+  
+.active {
+    background-color: yellow;
 }
 
 .body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-}
-
-.footer {
-    display: flex;
-    justify-content: center;
+    margin-top: 80px;
+    margin-bottom: 60px;
 }
 
 h1, h2, h3 {
@@ -47,4 +81,12 @@ img {
 
 .container {
     padding: 2px 16px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
