--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,11 @@ li a:hover:not(.active) {
 }
 
 .body {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.bodyflex {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -76,7 +81,7 @@ img {
     max-width: 100%;
     max-height: 100%;
     display: inline;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px 10px 10px 10px;
 }
 
 .container {
@@ -89,4 +94,92 @@ img {
     position: fixed;
     bottom: 0;
     width: 100%;
+}
+
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+.sidenav h3 {
+    padding: 8px 8px 8px 16px;
+    background-color: #111;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 16px;
+    text-decoration: none;
+    display: block;
+    transition: 0.3s;
+    background-color: #111;
+}
+  
+.sidenav a:hover {
+    background-color: #222;
+}
+  
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+  
+#main {
+    transition: margin-left .5s;
+    padding: 20px;
+}
+  
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+
+.grid-container {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 150px 150px 200px auto auto 200px auto auto;    
+}
+
+.grid-container div {
+    padding: 8px 8px 8px 8px;
+}
+
+.grid-label {
+    color: lightgray;
+    text-align: right;
+}
+
+.grid-value {
+    color: yellow;
+    background-color: #222222;
+}
+
+.grid-col2 {
+    grid-column: span 2;
+}
+
+.grid-col6 {
+    grid-column: span 6;
+}
+
+.grid-row2 {
+    grid-row: span 2;
+}
+
+.grid-row5 {
+    grid-row: span 5;
+}
+
+.grid-fill {
+    height: max-content;
 }
