--- a/css/styles.css
+++ b/css/styles.css
@@ -144,43 +144,69 @@ img {
     .sidenav a {font-size: 18px;}
 }
 
-.grid-container {
+.grid-container{
     display: grid;
     gap: 10px;
     font-size: 120%;
+    /* background-color: white; */
+}
+
+.grid-general-block {
     grid-template-columns: 150px 150px 200px auto auto 200px auto auto;    
 }
 
+.grid-attributes-block {
+    grid-template-columns: auto auto auto auto auto auto auto auto auto;    
+}
+
+.grid-abilities-block {
+    grid-template-columns: 100px auto 100px 100px;    
+}
+
 .grid-container div {
-    padding: 8px 8px 8px 8px;
+    padding: 4px 4px 4px 4px;
+}
+
+.grid-section {
+    background-color: gray;
+    color: black;
+    text-align: left;
+    font-size: 120%;
+    font-weight: bold;
+    padding: 5px 20px 5px 20px;
 }
 
 .grid-label {
     color: lightgray;
-    text-align: right;
 }
 
 .grid-value {
     color: yellow;
+    font-size: 120%;
+    width: 100%;
     background-color: #222222;
 }
 
-.grid-col2 {
-    grid-column: span 2;
-}
+.text-left { text-align: left; }
+.text-center { text-align: center; }
+.text-right { text-align: right; }
 
-.grid-col6 {
-    grid-column: span 6;
-}
+.grid-col2 { grid-column: span 2; }
+.grid-col3 { grid-column: span 3; }
+.grid-col4 { grid-column: span 4; }
+.grid-col5 { grid-column: span 5; }
+.grid-col6 { grid-column: span 6; }
+.grid-col7 { grid-column: span 7; }
+.grid-col8 { grid-column: span 8; }
+.grid-col9 { grid-column: span 9; }
+.grid-col10 { grid-column: span 10; }
+.grid-col11 { grid-column: span 11; }
+.grid-col12 { grid-column: span 12; }
 
-.grid-row2 {
-    grid-row: span 2;
-}
+.grid-row6 { grid-row: span 6; }
 
-.grid-row6 {
-    grid-row: span 6;
-}
+.grid-fill { height: max-content; }
 
-.grid-fill {
-    height: max-content;
+input, textarea {
+    border-radius: 5px 5px 5px 5px;
 }
