--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,25 @@ img {
     border-radius: 10px 10px 10px 10px;
 }
 
+input, textarea{
+    border-radius: 5px 5px 5px 5px;
+}
+
+button {
+    border-radius: 5px 5px 5px 5px;
+    color: yellow;
+    font-size: 120%;
+    background-color: #222222;
+}
+
+.text-left { text-align: left; }
+.text-center { text-align: center; }
+.text-right { text-align: right; }
+
+.content-left { align-self: left; }
+.content-center { align-self: center; }
+.content-right { align-self: right; }
+
 .container {
     padding: 2px 16px;
 }
@@ -203,10 +222,6 @@ img {
     background-color: #222222;
 }
 
-.text-left { text-align: left; }
-.text-center { text-align: center; }
-.text-right { text-align: right; }
-
 .grid-col2 { grid-column: span 2; }
 .grid-col3 { grid-column: span 3; }
 .grid-col4 { grid-column: span 4; }
@@ -222,7 +237,3 @@ img {
 .grid-row6 { grid-row: span 6; }
 
 .grid-fill { height: max-content; }
-
-input, textarea {
-    border-radius: 5px 5px 5px 5px;
-}
